<resources>
    <string name="app_name">Qazpp</string>
    <string name="final_score">Final Score</string>
    <string name="nan">NaN</string>
    <string name="outof" translatable="false">out of</string>
    <string name="restart">Restart</string>
    <string name="play">Play</string>
    <string name="create_quiz">Create quiz</string>
    <string name="exit">Exit</string>
    <string name="main_menu">Main Menu</string>
    <string name="give_up">Give up</string>
    <string name="quiz_selection">Quiz selection</string>
    <string name="reset_files">Restore files</string>
    <string name="quiz_creation">Quiz creation</string>
    <string name="quiz_name">Quiz name</string>
    <string name="edit">Edit quiz</string>
    <string name="delete">Delete</string>
</resources>