<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">


    <Button
        android:id="@+id/playButton"
        style="@style/menubutton"
        android:backgroundTint="@color/blue"
        android:onClick="PlayClick"
        android:text="@string/play"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/createButton"
        style="@style/menubutton"
        android:onClick="createClick"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/green"
        android:text="@string/create_quiz"
        app:layout_constraintEnd_toEndOf="@+id/playButton"
        app:layout_constraintStart_toStartOf="@+id/playButton"
        app:layout_constraintTop_toBottomOf="@+id/playButton" />

    <Button
        android:id="@+id/editButton"
        style="@style/menubutton"
        android:onClick="editClick"
        android:layout_marginTop="5dp"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="@+id/createButton"
        app:layout_constraintStart_toStartOf="@+id/createButton"
        app:layout_constraintTop_toBottomOf="@+id/createButton"
        android:backgroundTint="@color/yellow"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="341dp"
        android:layout_height="234dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/qazpp_logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="Stanislav Zdych © 2021"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>